--- a/templates/loader.html
+++ b/templates/loader.html
@@ -80,7 +80,8 @@ setInterval(function(){
         },
         error : function(request,error)
         {
-            alert("Request: "+JSON.stringify(request));
+           // alert("Request: "+JSON.stringify(request));
+           // console.log(JSON.stringify(request))
         }
     });
 }, 5000);
