--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,8 +7,8 @@
      <h3 class="loader typewriter" id="typewriter"></h3>
         <canvas id=c></canvas>
             <form action="/test" method="post" id="upload" enctype="multipart/form-data" style="transform: translate(50%, 100px);width: 50%;">
-                <div id="commence" style="width: 100%;height: 100%;text-align: right;margin: 30px -15px;position: absolute;opacity: 1;width: 100%;height:100%;position: absolute;visibility: hidden;transition: 2s;opacity: 1;transition: opacity 1s ease-in-out;-moz-transition: opacity 1s ease-in-out;-webkit-transition: opacity 1s ease-in-out;">
-                    <a class="waves-effect waves-light btn analysis-button modal-trigger" href="{% url 'loader' visit_id=visit_id %}">Commence Processing</a>
+                <div id="commence" style="width: 100%;height: 100%;text-align: right;margin: 30px -15px;position: absolute;display: none;transition: 2s;opacity: 1;transition: opacity 1s ease-in-out;-moz-transition: opacity 1s ease-in-out;-webkit-transition: opacity 1s ease-in-out;">
+                    <a style="z-index: 9999" class="waves-effect waves-light btn analysis-button modal-trigger" href="{% url 'loader' visit_id=visit_id %}">Commence Processing</a>
                     <!--<button class="waves-effect waves-light btn analysis-button modal-trigger" id="loader" style="transform: translate(0%, 480%);right: -25%;">Commence Processing</button>-->
                     </div>
                 <div class="file-field input-field">
@@ -55,7 +55,7 @@ function isLoadingCheck(){
         //             'X-CSRFToken': $('input[name="csrfmiddlewaretoken"]').val()
         //         }
         // })
-        document.getElementById('commence').style.visibility="visible";
+        document.getElementById('commence').style.display="block";
     }
 //     var isLoading = pond.getFiles().filter(x=>x.status !== 5).length !== 0;
 //     if(isLoading) {
